--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 ﻿{
 	"name": "EclipseArtifacts",
-	"version_number": "1.0.0",
+	"version_number": "1.1.0",
 	"website_url": "https://github.com/Judgy53/EclipseArtifacts",
 	"description": "Makes all Eclipse modifiers available as individual artifacts.",
 	"dependencies": [
-		"bbepis-BepInExPack-5.4.9",
-		"tristanmcpherson-R2API-4.0.11"
+		"bbepis-BepInExPack-5.4.2117",
+		"RiskofThunder-HookGenPatcher-1.2.5",
+		"RiskofThunder-R2API_Language-1.0.1"
 	]
 }
