--- a/EclipseArtifacts/EclipseArtifacts.csproj
+++ b/EclipseArtifacts/EclipseArtifacts.csproj
@@ -30,6 +30,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="EclipseRefurbished">
+      <HintPath>libs\EclipseRefurbished.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
