--- a/EclipseArtifacts/EclipseArtifacts.csproj
+++ b/EclipseArtifacts/EclipseArtifacts.csproj
@@ -6,6 +6,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyName>EclipseArtifacts</AssemblyName>
     <RootNamespace>EclipseArtifacts</RootNamespace>
+    <Version>1.2.0</Version>
+    <Authors>Judgy</Authors>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,11 +21,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-	
+
     <PackageReference Include="BepInEx.Core" Version="5.4.21" />
-	
+
     <PackageReference Include="R2API.Language" Version="1.0.1" />
-	
+
     <PackageReference Include="UnityEngine.Modules" Version="2021.3.33" IncludeAssets="compile" />
     <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.6-r.0" />
     <PackageReference Include="MMHOOK.RoR2" Version="2024.12.10" NoWarn="NU1701" />
